--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
+    "immutable": "^5.0.3",
     "jodit-react": "^4.1.2",
     "moment": "^2.30.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
-    "react-toastify": "^11.0.0"
+    "react-toastify": "^11.0.0",
+    "slate": "^0.112.0",
+    "slate-react": "^0.112.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
