--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
+    "react-sweetalert2": "^0.6.0",
     "react-toastify": "^11.0.0",
     "slate": "^0.112.0",
     "slate-react": "^0.112.0"
